name:                hecho
version:             0.1.0.0
synopsis:            Echo server written in Haskell
description:         Based on the guide at http://www.catonmat.net/blog/simple-haskell-tcp-server/
homepage:            https://github.com/michalc/hecho
license:             MIT
license-file:        LICENSE
author:              Michal Charemza
maintainer:          michalcharemza@gmail.com
category:            Network
build-type:          Simple

cabal-version:       >=1.10
executable hecho
    main-is:         Hecho.hs   
    hs-source-dirs:  src  
    build-depends:   base ==4.6.*,
                     network
   default-language: Haskell2010
test-suite test
   ghc-options:      -Wall
   type:             exitcode-stdio-1.0
   main-is:          HechoSpec.hs
   hs-source-dirs:   test, src   
   build-depends:    base ==4.6.*,
                     hspec >=1.8,
                     network
   default-language: Haskell2010